--- a/TaskApi/TaskApi/appsettings.json
+++ b/TaskApi/TaskApi/appsettings.json
@@ -12,4 +12,7 @@
       }
     }
   }
+  //,"ConnectionStrings": {
+  //  "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MINF_DB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  //}
 }
