--- a/TaskApi/TaskApi/Properties/launchSettings.json
+++ b/TaskApi/TaskApi/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      //"launchUrl": "api/task",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -19,7 +19,7 @@
     "TaskApi": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/task",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
